objects/Jan__c.object
<CustomObject>
    <fields>
        <fullName>Cranky_email__c</fullName>
        <label>Cranky email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Happy__c</fullName>
        <label>Happy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jolly__c</fullName>
        <label>Jolly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sad__c</fullName>
        <label>Sad</label>
        <type>TextArea</type>
    </fields>
    <label>Jan</label>
    <nameField>
        <label>Jan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>